sandbox-codebase/objects/Study__c/fields/Send_Study_Reminder_Return_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Send_Study_Reminder_Return_Instructions__c</fullName>
    <description>Helper field used in flow automation for non-traditional provider account SMS protocol. https://basecamp.com/2583453/projects/19794483/todos/514550599</description>
    <formula>ISBLANK(Provider_Account__r.Non_Traditional_Protocol__c) ||
INCLUDES(Provider_Account__r.Non_Traditional_Protocol__c,&apos;Study Reminder/Return Instructions&apos; )</formula>
    <label>Send Study Reminder/Return Instructions</label>
    <type>Checkbox</type>
</CustomField>