sandbox-codebase/objects/Study__c/fields/Shipped_Without_Confirming_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Without_Confirming_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipped Without Confirming Address</label>
    <type>Checkbox</type>
</CustomField>