sandbox-codebase/objects/Study__c/fields/start_price__c.field-meta.xml
<CustomField>
    <fullName>start_price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Start Price</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Studies</relationshipLabel>
    <relationshipName>Studies</relationshipName>
    <type>Lookup</type>
</CustomField>