sandbox-codebase/objects/Study__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>With Patient</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cellular Upload Complete</fullName>
                <isActive>false</isActive>
                <label>Cellular Upload Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>