sandbox-codebase/objects/Study__c/fields/Study_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Study_Age_Days__c</fullName>
    <formula>IF(ISPICKVAL( Status__c, &quot;Complete&quot;),  Study_Success_Decision_Date__c - CreatedDate, NOW() - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Age (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>