sandbox-codebase/objects/Study__c/fields/Study_Billable_Status__c.field-meta.xml
<CustomField>
    <fullName>Study_Billable_Status__c</fullName>
    <label>Study Billable Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Unbillable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>