sandbox-codebase/objects/Study__c/fields/Study_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Date__c</fullName>
    <label>Study Date</label>
    <type>DateTime</type>
</CustomField>