sandbox-codebase/objects/Study__c/fields/Study_Follow_Up_20_Days__c.field-meta.xml
<CustomField>
    <fullName>Study_Follow_Up_20_Days__c</fullName>
    <description>Used in SMS Mogli flow scheduled path to time the SMS Message to provide information about returning the device to Huxley Medical 20 days after the Study&apos;s Expected Study Date (datetime) https://basecamp.com/2583453/projects/19794483/todos/515688158</description>
    <formula>DATETIMEVALUE( TEXT( DATEVALUE(Expected_Study_Date__c) + 20 ) &amp; &quot; 14:00:00&quot; )</formula>
    <inlineHelpText>Used in SMS Mogli flow scheduled path to time the SMS Message to provide information about returning the device to Huxley Medical 20 days after the Study&apos;s Expected Study Date (datetime) https://basecamp.com/2583453/projects/19794483/todos/515688158</inlineHelpText>
    <label>Study Follow Up: 20 Days</label>
    <type>DateTime</type>
</CustomField>