sandbox-codebase/objects/Study__c/fields/Study_Follow_Up_Required_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Study_Follow_Up_Required_Time_Hours__c</fullName>
    <description>Represents the amount of time a study follow has been required

Notes: 1 is subtracted because follow up is not required until 1 day after the expected study date or last study follow up attempt</description>
    <formula>IF(AND(Study_Follow_up_Required__c, ISBLANK(Last_Study_Follow_up_Attempt__c)), NOW() - Expected_Study_Date__c - 1, 
IF(AND(Study_Follow_up_Required__c, NOT(ISBLANK(Last_Study_Follow_up_Attempt__c))), NOW() -  Last_Study_Follow_up_Attempt__c - 1, NULL))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hours</inlineHelpText>
    <label>Study Follow Up Required Time (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>