sandbox-codebase/objects/Study__c/fields/Study_Interpretation_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Interpretation_Date__c</fullName>
    <label>Study Evaluation Date</label>
    <type>DateTime</type>
</CustomField>