sandbox-codebase/objects/Study__c/fields/Study_Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Study_Issue_Description__c</fullName>
    <description>Brief description of the study issue</description>
    <inlineHelpText>Brief description of the study issue</inlineHelpText>
    <label>Study Issue Description</label>
    <type>TextArea</type>
</CustomField>