sandbox-codebase/objects/Study__c/fields/Study_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Study_Issue_Type__c</fullName>
    <description>What is the type of the issue with the study if it is unsuccessful</description>
    <inlineHelpText>What is the type of the issue with the study if it is unsuccessful. ECG Exclusion encompasses possible skin preparation, delamination and leads off issues</inlineHelpText>
    <label>Study Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 minute file - In transit</fullName>
            </value>
            <value>
                <fullName>10 minute file - with patient</fullName>
            </value>
            <value>
                <fullName>Algorithm</fullName>
            </value>
            <value>
                <fullName>Data Quality - ECG and PPG Exclusion</fullName>
            </value>
            <value>
                <fullName>Data Quality - ECG Exclusion</fullName>
            </value>
            <value>
                <fullName>Data Quality - Hardware/ Firmware</fullName>
            </value>
            <value>
                <fullName>Time under 88</fullName>
            </value>
            <value>
                <fullName>No study file (test attempted)</fullName>
            </value>
            <value>
                <fullName>PPG Exclusion  - Both</fullName>
            </value>
            <value>
                <fullName>Data Quality - PPG Exclusion</fullName>
                <label>PPG Exclusion - Low Pulse Amplitude</label>
            </value>
            <value>
                <fullName>PPG Exclusion - Noise/Motion Artifact</fullName>
            </value>
            <value>
                <fullName>Short Recording</fullName>
            </value>
            <value>
                <fullName>Study won&apos;t upload</fullName>
            </value>
            <value>
                <fullName>Huxley Agent Error</fullName>
                <isActive>false</isActive>
                <label>Huxley Agent Error</label>
            </value>
            <value>
                <fullName>Patient Unresponsive</fullName>
                <isActive>false</isActive>
                <label>Patient Unresponsive</label>
            </value>
            <value>
                <fullName>Shipping</fullName>
                <isActive>false</isActive>
                <label>Shipping</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>