sandbox-codebase/objects/Study__c/fields/Study_Reminder_Text_Sent__c.field-meta.xml
<CustomField>
    <fullName>Study_Reminder_Text_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate whether the study reminder text has been sent</description>
    <label>Study Reminder Text Sent</label>
    <type>Checkbox</type>
</CustomField>