sandbox-codebase/objects/Study__c/fields/Study_Success_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Success_Decision_Date__c</fullName>
    <label>Study Success Decision Date</label>
    <type>DateTime</type>
</CustomField>