sandbox-codebase/objects/Study__c/fields/Study_Success_Status__c.field-meta.xml
<CustomField>
    <fullName>Study_Success_Status__c</fullName>
    <label>Study Success Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Study not attempted</fullName>
            </value>
            <value>
                <fullName>Contraindicated</fullName>
                <isActive>false</isActive>
                <label>Contraindicated</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <isActive>false</isActive>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Successful - Unresponsive</fullName>
                <isActive>false</isActive>
                <label>Successful - Unresponsive</label>
            </value>
            <value>
                <fullName>Unresponsive_Patient</fullName>
                <isActive>false</isActive>
                <label>Unresponsive Patient</label>
            </value>
            <value>
                <fullName>Unsuccessful - Lost In Transit</fullName>
                <isActive>false</isActive>
                <label>Unsuccessful - Lost In Transit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>