sandbox-codebase/objects/Study__c/fields/Study_Turnaround_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Study_Turnaround_Time_Days__c</fullName>
    <description>Represents the time between the order being placed and the data being sent to the physician for review</description>
    <formula>IF(ISBLANK(Study_Success_Decision_Date__c), NULL, Study_Success_Decision_Date__c - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Turnaround Time (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>