sandbox-codebase/objects/Study__c/fields/Time_to_Pack_and_Ship_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Pack_and_Ship_Hours__c</fullName>
    <description>Represents the time it takes for the study to be packed and shipped after the address is confirmed</description>
    <formula>IF(ISBLANK(Date_Shipped_to_Patient__c), NOW() -  Address_Confirmed_Date__c, Date_Shipped_to_Patient__c - Address_Confirmed_Date__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Pack and Ship (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>