sandbox-codebase/objects/Study__c/fields/Turn_Time_Exception__c.field-meta.xml
<CustomField>
    <fullName>Turn_Time_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if there is an exception on the Turnaround Time metrics for this study and the data should be excluded from reporting (ex. hand delivery of study)</inlineHelpText>
    <label>Turn Time Exception</label>
    <type>Checkbox</type>
</CustomField>