sandbox-codebase/objects/Study__c/fields/Unsuccessful_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unsuccessful_Reason__c</fullName>
    <label>Unsuccessful Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Quality: Short recording Patient</fullName>
                <label>Data Quality: Short recording time (patient caused)</label>
            </value>
            <value>
                <fullName>Data Quality: Other</fullName>
            </value>
            <value>
                <fullName>Patient Refusal: Pre-ship</fullName>
                <label>Pre-ship: Patient Refusal</label>
            </value>
            <value>
                <fullName>Pre-ship: Patient Unresponsive</fullName>
            </value>
            <value>
                <fullName>Pre-ship: Provider Error</fullName>
            </value>
            <value>
                <fullName>Post-ship: Patient Refusal</fullName>
            </value>
            <value>
                <fullName>Post-Ship: Patient Unresponsive</fullName>
            </value>
            <value>
                <fullName>Provider error: post-ship</fullName>
                <label>Post-ship: Provider Error</label>
            </value>
            <value>
                <fullName>Contraindicated</fullName>
            </value>
            <value>
                <fullName>Transit issue (Lost, Undeliverable, etc)</fullName>
            </value>
            <value>
                <fullName>Multiple unsuccessful studies</fullName>
                <isActive>false</isActive>
                <label>Multiple unsuccessful studies</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>