sandbox-codebase/objects/Study__c/validationRules/Packaged_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Packaged_Date_Required</fullName>
    <active>true</active>
    <description>Once an asset is assigned to a study the packaged date cannot be blank.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Asset__c)),
    ISBLANK( Packaged_Date__c )
)</errorConditionFormula>
    <errorMessage>Packaged date is required.</errorMessage>
</ValidationRule>