sandbox-codebase/objects/Study__c/validationRules/Study_Data_Upload_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Study_Data_Upload_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(TEXT( Study_Success_Status__c ))), ISBLANK( Data_Upload_Date__c ), TEXT( Study_Success_Status__c) = &quot;Unresponsive Patient&quot;)</errorConditionFormula>
    <errorDisplayField>Data_Upload_Date__c</errorDisplayField>
    <errorMessage>Study Data Upload Date is Required to Proceed</errorMessage>
</ValidationRule>