sandbox-codebase/objects/Study__c/validationRules/Study_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Study_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(TEXT( Study_Success_Status__c ))), ISBLANK( Study_Date__c ), TEXT( Study_Success_Status__c )= &quot;Unresponsive Patient&quot;)</errorConditionFormula>
    <errorDisplayField>Study_Date__c</errorDisplayField>
    <errorMessage>Study Date is Required to Proceed</errorMessage>
</ValidationRule>