sandbox-codebase/objects/Study__c/validationRules/Study_Success_Decision_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Study_Success_Decision_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(TEXT( Study_Success_Status__c ))), ISBLANK(Study_Success_Decision_Date__c ))</errorConditionFormula>
    <errorDisplayField>Study_Success_Decision_Date__c</errorDisplayField>
    <errorMessage>Study Success Decision Date is Required to Proceed</errorMessage>
</ValidationRule>