sandbox-codebase/objects/Study__c/validationRules/Study_Success_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Study_Success_Status_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Study_Success_Decision_Date__c )), ISBLANK(TEXT( Study_Success_Status__c )))</errorConditionFormula>
    <errorDisplayField>Study_Success_Status__c</errorDisplayField>
    <errorMessage>Study Success Status is Required to Proceed</errorMessage>
</ValidationRule>