sandbox-codebase/objects/Study__c/validationRules/Unsuccessful_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Unsuccessful_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISPICKVAL (Study_Success_Status__c, &quot;Unsuccessful&quot;),  ISPICKVAL(Unsuccessful_Reason__c, &quot;&quot;))</errorConditionFormula>
    <errorMessage>Assign an Unsuccessful Reason for Unsuccessful Studies</errorMessage>
</ValidationRule>