sandbox-codebase/objects/Study__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Action_Required__c</columns>
    <columns>Study_Date__c</columns>
    <columns>Study_Success_Status__c</columns>
    <columns>Study_Success_Decision_Date__c</columns>
    <columns>Study_Age_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>With Patient,New,Outbound,Inbound,Processing,Complete</value>
    </filters>
    <label>All</label>
</ListView>