sandbox-codebase/objects/Study__c/listViews/Instructional_Call_Needed.listView-meta.xml
<ListView>
    <fullName>Instructional_Call_Needed</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Action_Required__c</columns>
    <columns>Last_Instructional_Call_Attempt__c</columns>
    <columns>Action_Required_Time_Hours__c</columns>
    <columns>Study_Age_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Instructional_Call_Required__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Need Instructional Call</label>
</ListView>