sandbox-codebase/objects/Study__c/listViews/Need_to_Send_PSat_Survey.listView-meta.xml
<ListView>
    <fullName>Need_to_Send_PSat_Survey</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider_Account__c</columns>
    <columns>Patient_Satisfaction_Survey_Sent__c</columns>
    <columns>Study_Age_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inbound,Processing,Complete</value>
    </filters>
    <filters>
        <field>Patient_Satisfaction_Survey_Sent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Opted_In_For_Texting__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Send PSat Survey</label>
</ListView>