sandbox-codebase/objects/Study__c/listViews/Outbound_Studies.listView-meta.xml
<ListView>
    <fullName>Outbound_Studies</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Packaged_Date__c</columns>
    <columns>Outbound_Tracking__c</columns>
    <columns>Outbound_Tracking_Stage__c</columns>
    <columns>Expected_Delivery_Date_Outbound__c</columns>
    <columns>Study_Age_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </filters>
    <label>Shipped</label>
</ListView>