sandbox-codebase/objects/Study__c/listViews/Patient_Orders_Study.listView-meta.xml
<ListView>
    <fullName>Patient_Orders_Study</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Action_Required__c</columns>
    <columns>Action_Required_Time_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action_Required__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Patient Orders</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>