sandbox-codebase/objects/Study__c/listViews/Ready_for_Data_Review.listView-meta.xml
<ListView>
    <fullName>Ready_for_Data_Review</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Action_Required__c</columns>
    <columns>Action_Required_Time_Hours__c</columns>
    <columns>Study_Age_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action_Required__c</field>
        <operation>equals</operation>
        <value>Review Data</value>
    </filters>
    <label>Need Data Review</label>
</ListView>