sandbox-codebase/objects/Study__c/listViews/Send_Study_Reminder_Text.listView-meta.xml
<ListView>
    <fullName>Send_Study_Reminder_Text</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Action_Required__c</columns>
    <columns>Study_Reminder_Text_Sent__c</columns>
    <columns>Study_Age_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action_Required__c</field>
        <operation>equals</operation>
        <value>Send Study Reminder Text</value>
    </filters>
    <label>Send Study Reminder Text</label>
</ListView>