sandbox-codebase/objects/Study__c/listViews/Study_Follow_Up.listView-meta.xml
<ListView>
    <fullName>Study_Follow_Up</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Action_Required__c</columns>
    <columns>Expected_Study_Date__c</columns>
    <columns>Last_Study_Follow_up_Attempt__c</columns>
    <columns>Action_Required_Time_Hours__c</columns>
    <columns>Study_Age_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Study_Follow_up_Required__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Action_Required__c</field>
        <operation>equals</operation>
        <value>Follow-up on Study Completion</value>
    </filters>
    <label>Need Study Follow Up</label>
</ListView>