sandbox-codebase/objects/Study__c/listViews/Waiting_for_Carrier_to_Scan.listView-meta.xml
<ListView>
    <fullName>Waiting_for_Carrier_to_Scan</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Status__c</columns>
    <columns>Outbound_Tracking_Stage__c</columns>
    <columns>Outbound_Tracking__c</columns>
    <columns>Study_Age_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </filters>
    <filters>
        <field>Outbound_Tracking_Stage__c</field>
        <operation>equals</operation>
        <value>Created</value>
    </filters>
    <label>Waiting for Carrier to Scan</label>
</ListView>